# scriptlocator

./: README.md  setup.cfg
scriptlocator/: LICENSE  scriptlocator.py
