[metadata]
name = scriptlocator
version = 0.0.1
author = Yoshi
author_email = yoshi4868686@gmail.com
description = For getting called script's direction
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    scriptlocator = scriptlocator:test